Fix: Contact avatar not aligned correctly in LeftPane when viewing in narrow mode

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -4593,7 +4593,7 @@ button.module-image__border-overlay:focus {
       width: 100%;
 
       .module-conversation-list--width-narrow & {
-        padding-inline: 14px 0;
+        padding-inline: 10px 0;
       }
 
       #{$unread-indicator} {
@@ -5410,7 +5410,7 @@ button.module-image__border-overlay:focus {
 }
 
 .module-left-pane__list {
-  position: absolute;
+  position: relative;
   outline: none;
 }
 
